Frontend connection successful

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,10 +20,14 @@
 
 <label for="dropdown" id="labelname">SELECT A BLOOD GROUP:</label>
 <select id="dropdown">
-    <option value="A">A</option>
-    <option value="O">O</option>
-    <option value="B">B</option>
-    <option value="AB">AB</option>
+    <option value="A+">A+</option>
+    <option value="A-">A-</option>
+    <option value="O+">O+</option>
+    <option value="O-">O-</option>
+    <option value="B+">B+</option>
+    <option value="B-">B-</option>
+    <option value="AB+">AB+</option>
+    <option value="AB-">AB-</option>
 </select>
 <button id="submitButton">Submit</button>
         </div>
