--- a/frontend/userLogin.html
+++ b/frontend/userLogin.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <section>
-        <div classs="form-box">
+        <div class="form-box">
             <form action="">
                 <h2>Login</h2>
                 <div class="inputbox">
@@ -23,8 +24,8 @@
                     <label for="">Password</label>
                 </div>
                 <div class="forget">
-                    <label for=""><input type="checkbox">Remember Me</label>
-                    <a href="#">Forget Password</a>
+                    <label for=""><input type="checkbox">Remember Me<a href="#">Forget Password</a></label>
+                    
                 </div>
                 <button>Log in</button>
                 <div class="register">
