--- a/frontend/userLogin.html
+++ b/frontend/userLogin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
 </head>
@@ -14,14 +14,14 @@
                 <h2>Login</h2>
                 <div class="inputbox">
                     <ion-icon name="mail-outline"></ion-icon>
-                    <input type="email" required>
-                    <label for="">Email</label>
+                    <input type="email" required autocomplete="off">
+                    <label for="email">Email</label>
                 </div>
 
                 <div class="inputbox">
                     <ion-icon name="lock-closed-outline"></ion-icon>
-                    <input type="password" required>
-                    <label for="">Password</label>
+                    <input type="password" required autocomplete="new-password">
+                    <label for="password">Password</label>
                 </div>
                 <div class="forget">
                     <label for=""><input type="checkbox">Remember Me<a href="#">Forget Password</a></label>
@@ -29,7 +29,7 @@
                 </div>
                 <button>Log in</button>
                 <div class="register">
-                    <p>Don't have an account?<a href="#">Register</a></p>
+                    <p>Don't have an account?<a href="signUp.html">Register</a></p>
                 </div>
             </form>
 
