--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,7 @@
     <h1>Hi</h1>
     <a href="practice.html">go to this page</a>
     <a href="userLogin.html">Login</a>
+    <script src = "script.js"></script>
+    <button onclick="abc()">ffff</button>
 </body>
 </html>
