user home pages ready

--- a/frontend/userLogin.html
+++ b/frontend/userLogin.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
     <section>
+        <div class="image-container">
+           
+            <img id="your-image" src="login.png" alt="Your Image">
+        </div>
         <div class="form-box">
             <form id="me">
                 <h2>Login</h2>
