frontend almost sorted

--- a/frontend/userSignup2.html
+++ b/frontend/userSignup2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="signUp.js" defer></script>
+    <script src="js/signUp.js" defer></script>
+    <link rel="stylesheet" href="css/userSignup.css">
 </head>
 <body>
     <div class="sign-up">
@@ -30,5 +31,6 @@
             <p>Already have an account? <a href="userLogin.html">Login here</a></p>
         </div>
     </div>
+    
 </body>
 </html>
