--- a/frontendPages/htmlPages/practice.html
+++ b/frontendPages/htmlPages/practice.html
@@ -66,6 +66,6 @@
              
         <!-- </div> -->
     <!-- </div> -->
-    <script src="script.js"></script>
+    <script src="/js/practiceScript.js"></script>
 </body>
 </html>
