--- a/frontendPages/htmlPages/bankProfile.html
+++ b/frontendPages/htmlPages/bankProfile.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div class="header" id="headerDiv">
-        <a href="bankHome.html">Back</a>
-    </div>
+    <div class="header" id="headerDiv"></div>
     <div class="body" id="bodyDiv">
+        <div class="header2" id="header2"></div>
         <div class="container" id="container">
-
+        </div>
+        <div class="container2" id="container2">
         </div>
     </div>
     <script src="js/bankProfile.js"></script>
