bank pending user appointments updated

--- a/frontendPages/htmlPages/bankUPA.html
+++ b/frontendPages/htmlPages/bankUPA.html
@@ -13,9 +13,9 @@
 <body>
     <div class="whole-body">
         <div class="header" id="header"></div>
-        <div class="main-body" id="body">
+        <div class="main-body" id="mainBody">
             <div class="sidebar" id="sidebar"></div>
-            <div class="main-content" id="main-content"></div>
+            <div class="main-content" id="mainContent"></div>
         </div>
     </div>
     <script src="./js/bankUPA.js"></script>
