--- a/frontendPages/htmlPages/userSignup2.html
+++ b/frontendPages/htmlPages/userSignup2.html
@@ -21,9 +21,11 @@
             <label>Password</label>
             <input id="passwordInputId" type="password" placeholder="Enter your Password" required autocomplete="new-password">
             <br>
+            <label>Confirm Password</label>
+            <input id="confirmPasswordInputId" type="password" placeholder="Confirm your Password" required autocomplete="new-password">
+            <br>
         </form>
-        <div class="submitAgrre">
-            <!-- <label for=""><input type="checkbox">By clicking the submit button you agree to our terms and conditions</label> -->
+        <div class="submitAgree">
             <button id="submitButton" onclick="signUpRequest()">Submit</button>
         </div>
 
@@ -31,6 +33,5 @@
             <p>Already have an account? <a href="userLogin.html">Login here</a></p>
         </div>
     </div>
-    
 </body>
 </html>
